--- a/RecipeMaster/app/src/main/res/values/strings.xml
+++ b/RecipeMaster/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RecipeMaster</string>
     <string name="action_settings">Settings</string>
+    <string name="logo_title">RecipeMaster</string>
 </resources>
