--- a/RecipeMaster/app/src/main/res/values/strings.xml
+++ b/RecipeMaster/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RecipeMaster</string>
     <string name="action_settings">Settings</string>
     <string name="logo_title">RecipeMaster</string>
+    <string name="title_activity_pizza_recipe">Pizza Recipe!</string>
 </resources>
