--- a/RecipeMaster/app/src/main/res/values/strings.xml
+++ b/RecipeMaster/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="logo_title">RecipeMaster</string>
     <string name="title_activity_pizza_recipe">Pizza Recipe!</string>
+    <string name="facebook_app_id">1</string>
 </resources>
