--- a/RecipeMaster/app/src/main/res/values/strings.xml
+++ b/RecipeMaster/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="logo_title">RecipeMaster</string>
     <string name="title_activity_pizza_recipe">Pizza Recipe!</string>
     <string name="facebook_app_id">952380701502442</string>
-    <string name="app_id">YOUR APP ID</string>
+    <string name="app_id">EX/F7ggcLrFPGa0MHkahzY2WozM=</string>
 </resources>
